set spinner's float to none to avoid layout breakage that happens when spinner is hidden/shown using CSS visibility [touch: 7245]

--- a/css/espresso_ee_barcode_scanner.css
+++ b/css/espresso_ee_barcode_scanner.css
@@ -284,6 +284,10 @@ Attendee container css
 	margin:auto;
 }
 
+.eea-bs-ed-selection-container .spinner {
+	float: none;
+}
+
 .eea-bs-ed-selector {
 	display: inline-block;
 	vertical-align: middle;
